---
source: tests/parser/main.rs
description: "// Input file:\nlibsl \"1.0.0\";\n\nlibrary qualified_access_index_proc_call;\n\nfun test() {\n    Automaton(foo).procCall()[wrong];\n}\n"
input_file: tests/parser/test-data/qualified-access-index-proc-call.libsl
---
Err("encountered a syntax error at L6:29: missing SEMICOLON at \'[\'")
